[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/Player/Player/UserInterface/StatBars/PlayerStatsUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/User interface/Player stats/health.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/User interface/Player stats/energy.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/User interface/Player stats/mana.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/User interface/Player stats/stats-bars-x2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 3.5 )

[node name="PlayerStatsUI" type="Control"]
rect_scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="EnergyBg" type="TextureRect" parent="."]
margin_right = 19.0
margin_bottom = 74.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="HealthPgBar" type="TextureProgress" parent="."]
margin_left = 46.0
margin_top = 30.0
margin_right = 58.0
margin_bottom = 88.0
mouse_filter = 2
value = 90.0
texture_progress = ExtResource( 2 )
fill_mode = 3
nine_patch_stretch = true

[node name="EnergyPgBar" type="TextureProgress" parent="."]
margin_left = 6.0
margin_top = 30.0
margin_right = 18.0
margin_bottom = 88.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 3 )
fill_mode = 3

[node name="ManaPgBar" type="TextureProgress" parent="."]
margin_left = 26.0
margin_top = 30.0
margin_right = 38.0
margin_bottom = 88.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 4 )
fill_mode = 3
nine_patch_stretch = true

[node name="ManaArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ManaArea"]
position = Vector2( 67, 16 )
shape = SubResource( 1 )
disabled = true

[node name="HealthArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthArea"]
position = Vector2( 67, 6.5 )
shape = SubResource( 1 )
disabled = true

[node name="EnergyArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnergyArea"]
position = Vector2( 67, 26 )
shape = SubResource( 1 )
disabled = true

[connection signal="mouse_entered" from="ManaArea" to="." method="_on_ManaArea_mouse_entered"]
[connection signal="mouse_exited" from="ManaArea" to="." method="_on_ManaArea_mouse_exited"]
[connection signal="mouse_entered" from="HealthArea" to="." method="_on_HealthArea_mouse_entered"]
[connection signal="mouse_exited" from="HealthArea" to="." method="_on_HealthArea_mouse_exited"]
[connection signal="mouse_entered" from="EnergyArea" to="." method="_on_EnergyArea_mouse_entered"]
[connection signal="mouse_exited" from="EnergyArea" to="." method="_on_EnergyArea_mouse_exited"]
